prevent text wrapping in table vis3

--- a/css/harvest-map.css
+++ b/css/harvest-map.css
@@ -93,6 +93,7 @@ td.indented
   margin-right:0%;
   margin-top: 0%;*/
   margin-top: 100px;
+	white-space: nowrap;
 	
 }
 .table1{
